adding hard and medium algo expert problems.